--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "discord-bot-api",
   "version": "1.0.0",
+  "description": "API pour exposer les stats Discord",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "discord.js": "^14.15.3",
-    "express": "^4.19.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
