--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "cors": "^2.8.5"
   },
   "engines": {
-    "node": "16.x"
+    "node": "18.x"
   },
   "author": "Ton Nom",
-  "license": "ISC",
-  "type": "module"
+  "license": "ISC"
 }
