--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "discord-bot-api",
   "version": "1.0.0",
-  "description": "API de bot Discord",
+  "description": "API Discord bot",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
