--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "name": "discord-bot-api",
   "version": "1.0.0",
-  "description": "API Discord bot",
+  "description": "API pour exposer les stats Discord",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.15.3",
-    "express": "^4.19.2",
+    "express": "^4.18.2",
     "cors": "^2.8.5"
   },
   "engines": {
-    "node": "18.x"
-  },
-  "author": "Ton Nom",
-  "license": "ISC"
+    "node": ">=18.x"
+  }
 }
