--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "discord-bot-api",
   "version": "1.0.0",
-  "description": "API pour exposer les stats Discord",
+  "description": "API Discord bot - stats only",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "discord.js": "^14.15.3",
+    "express": "^4.19.2",
     "cors": "^2.8.5"
   },
   "engines": {
-    "node": ">=18.x"
-  }
+    "node": "20.x"
+  },
+  "author": "Ton Nom",
+  "license": "ISC"
 }
